Formatting and naming improvements

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -42,6 +42,6 @@ services:
       - |
         npm i vite -g
         npm ci
-        vite build --watch
+        vite build -w
     volumes:
       - ../src/round-robin-frontend:/var/www/
